ndb - bug#52217 - make sure that cnewestCompleteGci is set properly during node restart (or take-over during sr)