storage/ndb/src/kernel/blocks/dblqh/DblqhMain.cpp
@@ -11966,6 +11966,22 @@ void Dblqh::execLCP_FRAG_ORD(Signal* signal)
 
     lcpPtr.p->firstFragmentFlag= true;
     
+#ifdef ERROR_INSERT
+    /**
+     * Only (so-far) in error insert
+     *   check that keepGci (tail of REDO) is smaller than of head of REDO
+     *
+     */
+    if (! ((cnewestCompletedGci >= lcpFragOrd->keepGci) &&
+           (cnewestGci >= lcpFragOrd->keepGci)))
+    {
+      ndbout_c("lcpFragOrd->keepGci: %u cnewestCompletedGci: %u cnewestGci: %u",
+               lcpFragOrd->keepGci, cnewestCompletedGci, cnewestGci);
+    }
+    ndbrequire(cnewestCompletedGci >= lcpFragOrd->keepGci);
+    ndbrequire(cnewestGci >= lcpFragOrd->keepGci);
+#endif
+
     c_lcpId = lcpFragOrd->lcpId;
     ndbrequire(lcpPtr.p->lcpState == LcpRecord::LCP_IDLE);
     setLogTail(signal, lcpFragOrd->keepGci);
@@ -14990,7 +15006,14 @@ void Dblqh::execSTART_FRAGREQ(Signal* signal)
   Uint32 noOfLogNodes = startFragReq->noOfLogNodes;
   Uint32 lcpId = startFragReq->lcpId;
 
-  if (noOfLogNodes > 1)
+  bool doprint = false;
+#ifdef ERROR_INSERT
+  /**
+   * Always printSTART_FRAG_REQ (for debugging) if ERROR_INSERT is set
+   */
+  doprint = true;
+#endif
+  if (doprint || noOfLogNodes > 1)
   {
     printSTART_FRAG_REQ(stdout, signal->getDataPtr(), signal->getLength(),
                         number());
@@ -17117,8 +17140,18 @@ void Dblqh::readSrFourthPhaseLab(Signal* signal)
    *  INITIALISE LOG LAP TO BE THE LOG LAP AS FOUND IN THE HEAD PAGE.
    *  WE HAVE TO CALCULATE THE NUMBER OF REMAINING WORDS IN THIS MBYTE.
    * ----------------------------------------------------------------------- */
-  cnewestGci = crestartNewestGci;
-  cnewestCompletedGci = crestartNewestGci;
+  Uint32 gci = crestartNewestGci;
+  if (crestartOldestGci > gci)
+  {
+    jam();
+    /**
+     * If "keepGci" is bigger than latest-completed-gci
+     *   move cnewest/cnewestCompletedGci forward
+     */
+    gci = crestartOldestGci;
+  }
+  cnewestGci = gci;
+  cnewestCompletedGci = gci;
   logPartPtr.p->logPartNewestCompletedGCI = cnewestCompletedGci;
   logPartPtr.p->currentLogfile = logFilePtr.i;
   logFilePtr.p->filePosition = logPartPtr.p->headPageNo;
